<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">罷免文件處理器</string>
    <string name="action_settings">設定</string>

    <string name="basic_setting">基本設定</string>
    <string name="set_basic_setting">進行基本設定</string>
    	<string name="user_nickname">工作人員代號</string>
    	<string name="user_password">工作人員密碼</string>
    	<string name="remote_url">遠端系統網址</string>
    	
    <string name="doc_processing">罷免文書處理</string>
    <string name="process_doc">處理罷免文書</string>
    <string name="doc_process_goal">文件處理目標</string>
    
    <string name="input">輸入</string>
    <string name="start">開始作業</string>
    <string name="continues">繼續</string>
    <string name="update">更新</string>
    <string name="set">設定</string>
    <string name="set_succeeded">設定成功</string>
    <string name="set_failed">設定失敗</string>
    <string name="cancel">取消</string>
    <string name="exit">結束</string>
    <string name="blank">""</string>
    
    <string name="process_result">處理結果</string>
    <string name="process_succeeded">處理成功</string>
    <string name="process_failed">處理失敗</string>

    <string name="serial_number">文件流水號</string>
    <string name="doctype">文件類別</string>
    <string name="docstatus">文件狀態</string>
    <string name="docoristatus">文件原本狀態</string>
    <string name="doccurrentstatus">文件目前狀態</string>
    <string name="statusupdatetime">狀態更新時間</string>
    <string name="nextstep">下一步</string>
    	<string name="nextdoc">按「繼續」處理其他文件</string>
    	<string name="idl5first">輸入文件上身分證後五碼後按「繼續」</string>
    	<string name="updateuser">請到「基本設定」設定正確的使用者</string>
    
    <string name="proposal">提議書</string>
    <string name="petition">連署書</string>

    <string name="idl5">身分證後五碼</string>
    <string name="no_idl5">無須輸入</string>
    <string name="add_idl5">請補填身分證後五碼</string>
    <string name="no_user">使用者不存在</string>
    
    <string name="scanned_data">掃描所得資料</string>
    <string name="returned_data">系統回傳資料</string>
    <string name="identified_data">辨識所得資料</string>
    
    <string name="district">所屬選區</string>
    <string name="legislator">立委</string>

    <string name="set_doc">將文件：</string>
    <string name="con_insert_password">設為「中選會退回」及「無效文件」時請輸入密碼</string>
    <string name="as_received">設為已收到</string>
    <string name="as_sent">設為已送出</string>
    <string name="as_refused">設為中選會退回</string>
    <string name="as_voided">設為無效文件</string>
    <string name="back_for_stfpwd">請回上一頁輸入密碼</string>
    
    <string name="created">已建立</string>
    <string name="received">已收到</string>
    <string name="sent">已送出</string>
    <string name="refused">已被中選會退回</string>
    <string name="voided">已設為無效</string>
    
    <string-array name="district_array">
        <item>臺北市第01選區．丁守中</item>
		<item>臺北市第02選區．姚文智</item>
		<item>臺北市第03選區．羅淑蕾</item>
		<item>臺北市第04選區．蔡正元</item>
		<item>臺北市第05選區．林郁方</item>
		<item>臺北市第06選區．蔣乃辛</item>
		<item>臺北市第07選區．費鴻泰</item>
		<item>臺北市第08選區．賴士葆</item>
		<item>基隆市選區．謝國樑</item>
		<item>新北市第01選區．吳育昇</item>
		<item>新北市第02選區．林淑芬</item>
		<item>新北市第03選區．高志鵬</item>
		<item>新北市第04選區．李鴻鈞</item>
		<item>新北市第05選區．黃志雄</item>
		<item>新北市第06選區．林鴻池</item>
		<item>新北市第07選區．江惠貞</item>
		<item>新北市第08選區．張慶忠</item>
		<item>新北市第09選區．林德福</item>
		<item>新北市第10選區．盧嘉辰</item>
		<item>新北市第11選區．羅明才</item>
		<item>新北市第12選區．李慶華</item>
		<item>宜蘭縣選區．陳歐珀</item>
		<item>桃園縣第01選區．陳根德</item>
		<item>桃園縣第02選區．廖正井</item>
		<item>桃園縣第03選區．陳學聖</item>
		<item>桃園縣第04選區．楊麗環</item>
		<item>桃園縣第05選區．呂玉玲</item>
		<item>桃園縣第06選區．孫大千</item>
		<item>新竹市選區．呂學樟</item>
		<item>新竹縣選區．徐欣瑩</item>
		<item>苗栗縣第01選區．陳超明</item>
		<item>苗栗縣第02選區．徐耀昌</item>
		<item>臺中市第01選區．蔡其昌</item>
		<item>臺中市第02選區．顏寬恒</item>
		<item>臺中市第03選區．楊瓊瓔</item>
		<item>臺中市第04選區．蔡錦隆</item>
		<item>臺中市第05選區．盧秀燕</item>
		<item>臺中市第06選區．林佳龍</item>
		<item>臺中市第07選區．何欣純</item>
		<item>臺中市第08選區．江啟臣</item>
		<item>彰化縣第01選區．王惠美</item>
		<item>彰化縣第02選區．林滄敏</item>
		<item>彰化縣第03選區．鄭汝芬</item>
		<item>彰化縣第04選區．魏明谷</item>
		<item>南投縣第01選區．馬文君</item>
		<item>南投縣第02選區．林明溱</item>
		<item>雲林縣第01選區．張嘉郡</item>
		<item>雲林縣第02選區．劉建國</item>
		<item>嘉義市選區．李俊俋</item>
		<item>嘉義縣第01選區．翁重鈞</item>
		<item>嘉義縣第02選區．陳明文</item>
		<item>臺南市第01選區．葉宜津</item>
		<item>臺南市第02選區．黃偉哲</item>
		<item>臺南市第03選區．陳亭妃</item>
		<item>臺南市第04選區．許添財</item>
		<item>臺南市第05選區．陳唐山</item>
		<item>高雄市第01選區．邱議瑩</item>
		<item>高雄市第02選區．邱志偉</item>
		<item>高雄市第03選區．黃昭順</item>
		<item>高雄市第04選區．林岱樺</item>
		<item>高雄市第05選區．管碧玲</item>
		<item>高雄市第06選區．李昆澤</item>
		<item>高雄市第07選區．趙天麟</item>
		<item>高雄市第08選區．許智傑</item>
		<item>高雄市第09選區．林國正</item>
		<item>屏東縣第01選區．蘇震清</item>
		<item>屏東縣第02選區．王進士</item>
		<item>屏東縣第03選區．潘孟安</item>
		<item>臺東縣選區．劉櫂豪</item>
		<item>花蓮縣選區．王廷升</item>
		<item>澎湖縣選區．楊曜</item>
		<item>金門縣選區．楊應雄</item>
		<item>連江縣選區．陳雪生</item>
		<item>平地原住民．廖國棟</item>
		<item>平地原住民．鄭天財</item>
		<item>山地原住民．孔文吉</item>
		<item>山地原住民．高金素梅</item>
		<item>山地原住民．簡東明</item>
		<item>僑居國外國民．詹凱臣</item>
    </string-array>
    
</resources>
