<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:text="@string/doc_process_goal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="12pt" />

        <LinearLayout
            android:id="@+id/linearLayoutSetAs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textSetAs"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_doc"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/linearLayoutAs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RadioButton
                android:id="@+id/radioButtonAsReceived"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/as_received" />

            <RadioButton
                android:id="@+id/radioButtonAsSent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_sent" />

            <RadioButton
                android:id="@+id/radioButtonAsRefused"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_refused" />

            <RadioButton
                android:id="@+id/radioButtonAsVoided"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/as_voided" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/linearLayoutUserPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewUserPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_password"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/valuePassword"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="textPassword" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/con_insert_password"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff0000"
            android:textSize="8pt" />

        <LinearLayout
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:id="@+id/linearLayoutButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start"
                android:textSize="12pt" />

            <Button
                android:id="@+id/buttonExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/exit"
                android:textSize="12pt" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>