<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/set_basic_setting"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="12pt" />

    <LinearLayout
        android:id="@+id/linearLayoutRemoteURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="19dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/textViewRemoteURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remote_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextRemoteURL"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textUri" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutUserNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutRemoteURL"
        android:orientation="horizontal" >
        
        <TextView
            android:id="@+id/textViewUserNickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_nickname"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:inputType="textEmailAddress" />
        
    </LinearLayout>

    <TextView
        android:id="@+id/textViewSetResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutUserNickname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="3dp"
        android:text="@string/blank"
        android:textColor="#ff0000"
        android:textSize="12pt"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:id="@+id/linearLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayoutUserNickname"
        android:layout_below="@+id/textViewSetResult"
        android:layout_centerVertical="true"
        android:layout_marginTop="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set"
            android:textSize="12pt" />

        <Button
            android:id="@+id/buttonExit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exit"
            android:textSize="12pt" />
    </LinearLayout>

</RelativeLayout>